{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 531,
  "lineage": "0b17a00d-9404-d833-45f8-c01f4e51fe44",
  "resources": [
    {
      "module": "module.alb_webserver",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb_private_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:739275445912:loadbalancer/app/tf-lb-20250725080625548000000001/f28113085c4a8979",
            "arn_suffix": "app/tf-lb-20250725080625548000000001/f28113085c4a8979",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-lb-20250725080625548000000001-28112297.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:739275445912:loadbalancer/app/tf-lb-20250725080625548000000001/f28113085c4a8979",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-lb-20250725080625548000000001",
            "name_prefix": "tf-lb-",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0475f712ba21fef80"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-074ad8ef5527bd73b"
              },
              {
                "subnet_id": "subnet-0910c681d321aba84"
              }
            ],
            "subnets": [
              "subnet-074ad8ef5527bd73b",
              "subnet-0910c681d321aba84"
            ],
            "vpc_id": "vpc-0e9443e82a0d573e4",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "module.alb_webserver.aws_security_group.alb_webserver_security_group",
            "module.vpc.aws_subnet.demo-subnet-public",
            "module.vpc.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb_webserver",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener_private_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:739275445912:listener/app/tf-lb-20250725080625548000000001/f28113085c4a8979/ca8bce1781add4a0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:739275445912:targetgroup/tf-20250725072202260900000001/4e23d5cb1763585c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:739275445912:listener/app/tf-lb-20250725080625548000000001/f28113085c4a8979/ca8bce1781add4a0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:739275445912:loadbalancer/app/tf-lb-20250725080625548000000001/f28113085c4a8979",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_webserver.aws_lb.alb_private_ec2",
            "module.alb_webserver.aws_lb_target_group.alb_private_ec2_target_group",
            "module.alb_webserver.aws_security_group.alb_webserver_security_group",
            "module.vpc.aws_subnet.demo-subnet-public",
            "module.vpc.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb_webserver",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_private_ec2_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:739275445912:targetgroup/tf-20250725072202260900000001/4e23d5cb1763585c",
            "arn_suffix": "targetgroup/tf-20250725072202260900000001/4e23d5cb1763585c",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:739275445912:targetgroup/tf-20250725072202260900000001/4e23d5cb1763585c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-20250725072202260900000001",
            "name_prefix": "tf-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e9443e82a0d573e4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb_webserver",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_webserver_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:739275445912:security-group/sg-0475f712ba21fef80",
            "description": "ALB webserver",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0475f712ba21fef80",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb_webserver_security_group",
            "name_prefix": "",
            "owner_id": "739275445912",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e9443e82a0d573e4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.bastion_host",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion-host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f918f7e67a3323f0",
            "arn": "arn:aws:ec2:ap-south-1:739275445912:instance/i-0dc22b49706fff59f",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dc22b49706fff59f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-20250725075040653200000001",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03e708314a994d2e2",
            "private_dns": "ip-10-0-1-48.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.48",
            "public_ip": "65.2.170.208",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d10ee0e639e28116",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0910c681d321aba84",
            "tags": {
              "Name": "bastion_host"
            },
            "tags_all": {
              "Name": "bastion_host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01efe8cca58330696"
            ]
          },
          "dependencies": [
            "module.bastion_host.aws_key_pair.aws_key_pair",
            "module.bastion_host.aws_security_group.bastion_security_group",
            "module.vpc.aws_subnet.demo-subnet-public",
            "module.vpc.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.bastion_host",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:739275445912:security-group/sg-01efe8cca58330696",
            "description": "Only ssh is enabled",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01efe8cca58330696",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion_security_group",
            "name_prefix": "",
            "owner_id": "739275445912",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e9443e82a0d573e4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private_ec2_template",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_ec2_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:739275445912:security-group/sg-0c1daf82c571807e6",
            "description": "Only ssh is enabled from bastion host and webserver is enabled from ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c1daf82c571807e6",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01efe8cca58330696"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0475f712ba21fef80"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "private_ec2_security_group",
            "name_prefix": "",
            "owner_id": "739275445912",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e9443e82a0d573e4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_webserver.aws_security_group.alb_webserver_security_group",
            "module.bastion_host.aws_security_group.bastion_security_group",
            "module.vpc.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ec7f3ac2b4dd8728",
            "arn": "arn:aws:ec2:ap-south-1:739275445912:elastic-ip/eipalloc-0ec7f3ac2b4dd8728",
            "domain": "vpc",
            "id": "eipalloc-0ec7f3ac2b4dd8728",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-15-207-216-21.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.207.216.21",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat_elastic_ip"
            },
            "tags_all": {
              "Name": "nat_elastic_ip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "demo-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:739275445912:internet-gateway/igw-0f6e31d3b7f6522b9",
            "id": "igw-0f6e31d3b7f6522b9",
            "owner_id": "739275445912",
            "tags": {
              "Name": "demo-gatewaydemo-vpc"
            },
            "tags_all": {
              "Name": "demo-gatewaydemo-vpc"
            },
            "vpc_id": "vpc-0e9443e82a0d573e4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_private_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ec7f3ac2b4dd8728",
            "association_id": "eipassoc-067e68de9638851ec",
            "connectivity_type": "public",
            "id": "nat-0971ea99da5a81e07",
            "network_interface_id": "eni-0e9686753d02ac82a",
            "private_ip": "10.0.1.111",
            "public_ip": "15.207.216.21",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0910c681d321aba84",
            "tags": {
              "Name": "nat_private_ec2"
            },
            "tags_all": {
              "Name": "nat_private_ec2"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_elastic_ip",
            "module.vpc.aws_subnet.demo-subnet-public",
            "module.vpc.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "demo-network-acl-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:739275445912:network-acl/acl-0506d3225a3ac513e",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0506d3225a3ac513e",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "739275445912",
            "subnet_ids": [
              "subnet-09c3c7c7a13bc3277",
              "subnet-0a6b34638c3866ffa"
            ],
            "tags": {
              "Name": "demo-network-acl-private"
            },
            "tags_all": {
              "Name": "demo-network-acl-private"
            },
            "vpc_id": "vpc-0e9443e82a0d573e4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "demo-network-acl-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:739275445912:network-acl/acl-0368379968accce3b",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0368379968accce3b",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "739275445912",
            "subnet_ids": [
              "subnet-074ad8ef5527bd73b",
              "subnet-0910c681d321aba84"
            ],
            "tags": {
              "Name": "demo-network-acl-public"
            },
            "tags_all": {
              "Name": "demo-network-acl-public"
            },
            "vpc_id": "vpc-0e9443e82a0d573e4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "private_subnet_assign",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-010dba23cc43937f2",
            "network_acl_id": "acl-0506d3225a3ac513e",
            "subnet_id": "subnet-09c3c7c7a13bc3277"
          },
          "dependencies": [
            "module.vpc.aws_network_acl.demo-network-acl-private",
            "module.vpc.aws_subnet.demo-subnet-private",
            "module.vpc.aws_vpc.demo-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0b3a5b3c76ac49ad5",
            "network_acl_id": "acl-0506d3225a3ac513e",
            "subnet_id": "subnet-0a6b34638c3866ffa"
          },
          "dependencies": [
            "module.vpc.aws_network_acl.demo-network-acl-private",
            "module.vpc.aws_subnet.demo-subnet-private",
            "module.vpc.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "public_subnet_assign",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-038236b6fcd7b405d",
            "network_acl_id": "acl-0368379968accce3b",
            "subnet_id": "subnet-0910c681d321aba84"
          },
          "dependencies": [
            "module.vpc.aws_network_acl.demo-network-acl-public",
            "module.vpc.aws_subnet.demo-subnet-public",
            "module.vpc.aws_vpc.demo-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-08b93274ccdf4c756",
            "network_acl_id": "acl-0368379968accce3b",
            "subnet_id": "subnet-074ad8ef5527bd73b"
          },
          "dependencies": [
            "module.vpc.aws_network_acl.demo-network-acl-public",
            "module.vpc.aws_subnet.demo-subnet-public",
            "module.vpc.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "demo-private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:739275445912:route-table/rtb-0abaa789e8c37dc3a",
            "id": "rtb-0abaa789e8c37dc3a",
            "owner_id": "739275445912",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0971ea99da5a81e07",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": null,
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": null,
                "destination_prefix_list_id": null,
                "egress_only_gateway_id": null,
                "gateway_id": "local",
                "ipv6_cidr_block": null,
                "local_gateway_id": null,
                "nat_gateway_id": null,
                "network_interface_id": null,
                "transit_gateway_id": null,
                "vpc_endpoint_id": null,
                "vpc_peering_connection_id": null
              }
            ],
            "tags": {
              "Name": "demo-private-route-table"
            },
            "tags_all": {
              "Name": "demo-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e9443e82a0d573e4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_elastic_ip",
            "module.vpc.aws_nat_gateway.nat_private_ec2",
            "module.vpc.aws_subnet.demo-subnet-public",
            "module.vpc.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "demo-public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:739275445912:route-table/rtb-01df52465685c03f8",
            "id": "rtb-01df52465685c03f8",
            "owner_id": "739275445912",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f6e31d3b7f6522b9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo-public-route-table"
            },
            "tags_all": {
              "Name": "demo-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e9443e82a0d573e4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.demo-gateway",
            "module.vpc.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_assign",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf3589245905e583",
            "route_table_id": "rtb-0abaa789e8c37dc3a",
            "subnet_id": "subnet-09c3c7c7a13bc3277"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_elastic_ip",
            "module.vpc.aws_nat_gateway.nat_private_ec2",
            "module.vpc.aws_route_table.demo-private-route-table",
            "module.vpc.aws_subnet.demo-subnet-private",
            "module.vpc.aws_subnet.demo-subnet-public",
            "module.vpc.aws_vpc.demo-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08505948bf1960f09",
            "route_table_id": "rtb-0abaa789e8c37dc3a",
            "subnet_id": "subnet-0a6b34638c3866ffa"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_elastic_ip",
            "module.vpc.aws_nat_gateway.nat_private_ec2",
            "module.vpc.aws_route_table.demo-private-route-table",
            "module.vpc.aws_subnet.demo-subnet-private",
            "module.vpc.aws_subnet.demo-subnet-public",
            "module.vpc.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_assign",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02953d34e771636b2",
            "route_table_id": "rtb-01df52465685c03f8",
            "subnet_id": "subnet-0910c681d321aba84"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.demo-gateway",
            "module.vpc.aws_route_table.demo-public-route-table",
            "module.vpc.aws_subnet.demo-subnet-public",
            "module.vpc.aws_vpc.demo-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f7d331a918f76396",
            "route_table_id": "rtb-01df52465685c03f8",
            "subnet_id": "subnet-074ad8ef5527bd73b"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.demo-gateway",
            "module.vpc.aws_route_table.demo-public-route-table",
            "module.vpc.aws_subnet.demo-subnet-public",
            "module.vpc.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo-subnet-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:739275445912:subnet/subnet-09c3c7c7a13bc3277",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09c3c7c7a13bc3277",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "739275445912",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-subnet-private-1",
              "Vpc_info": "10.0.0.0/16-demo-vpc"
            },
            "tags_all": {
              "Name": "demo-subnet-private-1",
              "Vpc_info": "10.0.0.0/16-demo-vpc"
            },
            "vpc_id": "vpc-0e9443e82a0d573e4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.demo-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:739275445912:subnet/subnet-0a6b34638c3866ffa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a6b34638c3866ffa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "739275445912",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-subnet-private-2",
              "Vpc_info": "10.0.0.0/16-demo-vpc"
            },
            "tags_all": {
              "Name": "demo-subnet-private-2",
              "Vpc_info": "10.0.0.0/16-demo-vpc"
            },
            "vpc_id": "vpc-0e9443e82a0d573e4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo-subnet-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:739275445912:subnet/subnet-0910c681d321aba84",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0910c681d321aba84",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "739275445912",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-subnet-public-1",
              "Vpc_info": "10.0.0.0/16-demo-vpc"
            },
            "tags_all": {
              "Name": "demo-subnet-public-1",
              "Vpc_info": "10.0.0.0/16-demo-vpc"
            },
            "vpc_id": "vpc-0e9443e82a0d573e4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.demo-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:739275445912:subnet/subnet-074ad8ef5527bd73b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-074ad8ef5527bd73b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "739275445912",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-subnet-public-2",
              "Vpc_info": "10.0.0.0/16-demo-vpc"
            },
            "tags_all": {
              "Name": "demo-subnet-public-2",
              "Vpc_info": "10.0.0.0/16-demo-vpc"
            },
            "vpc_id": "vpc-0e9443e82a0d573e4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demo-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:739275445912:vpc/vpc-0e9443e82a0d573e4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-039630bc749fbb664",
            "default_route_table_id": "rtb-097747a2e62fac712",
            "default_security_group_id": "sg-032ce08a60d47fee4",
            "dhcp_options_id": "dopt-0c8a2770e3a8307d8",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e9443e82a0d573e4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-097747a2e62fac712",
            "owner_id": "739275445912",
            "tags": {
              "Name": "demo-vpc"
            },
            "tags_all": {
              "Name": "demo-vpc"
            }
          }
        }
      ]
    }
  ]
}